recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: value :: is not a member of Int
rep = l(0)::l(l.length-2)
          ^